other-mpol/spread-pods-across-topology/.kyverno-test/patchedResource.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeploy
  labels:
    distributed: required
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: zone
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            distributed: required
