other-mpol/spread-pods-across-topology/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: spread-pods
policies:
- ../spread-pods-across-topology.yaml
resources:
- resource.yaml
- exception-resource.yaml
exceptions:
- exception.yaml
results:
- kind: Deployment
  patchedResources: patchedResource.yaml
  policy: spread-pods
  resources:
  - mydeploy
  result: pass
  isMutatingPolicy: true
- kind: Deployment
  policy: spread-pods
  resources: [exception-deployment]
  result: skip
  isMutatingPolicy: true
